--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,34 @@
 * {
   box-sizing: border-box;
 }
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
+  border: solid 3px black;
+  width: 100%;
+  gap:4px;
+}
+
+.collection{
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap:20px;
+  border: 2px solid red;
+  width: 100%;
+}
+
+
+/* .add-book{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 10px;
+  gap:1px;
+  border: 2px solid red;
+  width: 100%;
+} */
